--- a/index.html
+++ b/index.html
@@ -1392,16 +1392,37 @@
               <label for="custCity">المدينة</label>
               <select id="custCity">
                 <option value="">إختر المدينة</option>
-                <option>الدار البيضاء</option>
-                <option>الرباط</option>
-                <option>طنجة</option>
-                <option>مراكش</option>
-                <option>فاس</option>
-                <option>أكادير</option>
-                <option>مكناس</option>
-                <option>وجدة</option>
-                <option>تطوان</option>
-                <option>أسفي</option>
+             <option>الدار البيضاء</option>
+<option>الرباط</option>
+<option>طنجة</option>
+<option>مراكش</option>
+<option>فاس</option>
+<option>أكادير</option>
+<option>مكناس</option>
+<option>وجدة</option>
+<option>تطوان</option>
+<option>أسفي</option>
+<option>الناظور</option>
+<option>الخميسات</option>
+<option>القنيطرة</option>
+<option>بركان</option>
+<option>الجديدة</option>
+<option>خريبكة</option>
+<option>الحسيمة</option>
+<option>ورزازات</option>
+<option>تزنيت</option>
+<option>الصويرة</option>
+<option>العيون</option>
+<option>السمارة</option>
+<option>بني ملال</option>
+<option>تازة</option>
+<option>الراشيدية</option>
+<option>شفشاون</option>
+<option>كلميم</option>
+<option>زاكورة</option>
+<option>تاونات</option>
+<option>برشيد</option>
+<option>سيدي قاسم</option>
               </select>
             </div>
             <div class="field">
@@ -3077,3 +3098,4 @@
   </script>
 </body>
 </html>
+
